--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
     "react-native-scrollable-tab-view": "^0.8.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.1.2",
     "babel-jest": "22.0.3",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-react-native": "^3.2.0",
     "jest": "22.0.3",
     "react-test-renderer": "16.0.0"
   },
