--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-gallery": "0.0.17",
+    "react-native-image-gallery": "^2.1.4",
     "react-native-image-pan-zoom": "^2.0.16",
     "react-native-image-zoom-viewer": "^2.0.18",
     "react-native-scrollable-tab-view": "^0.8.0",
