--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "@types/react": "^16.0.34",
+    "@types/react-native": "^0.52.0",
     "lodash": "^4.17.4",
     "mobx": "^3.4.1",
     "mobx-react": "^4.3.5",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "babel-eslint": "^8.1.2",
     "babel-jest": "22.0.3",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -33,7 +35,9 @@
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-react-native": "^3.2.0",
     "jest": "22.0.3",
-    "react-test-renderer": "16.0.0"
+    "react-native-typescript-transformer": "^1.2.1",
+    "react-test-renderer": "16.0.0",
+    "typescript": "^2.6.2"
   },
   "jest": {
     "preset": "react-native"
