--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-fast-image": "^2.0.1",
     "react-native-image-gallery": "^2.1.4",
     "react-native-image-pan-zoom": "^2.0.16",
     "react-native-image-zoom-viewer": "^2.0.18",
