[Update] Update section list test page

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ buck-out/
 */fastlane/report.xml
 */fastlane/Preview.html
 */fastlane/screenshots
+android/app/src/main/assets/*
+android/app/src/main/res/drawable-mdpi/*
